[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "unfolding_linear"
description = "Deep unfolding of iterative methods to solve linear equations"
version = "0.1.0"
authors = [
    { name = "Salah Berra", email = "salahberra39@gmail.com"},
    { name = "Nennouche Mohamed", email = "moohaameed.nennouche@gmail.com"},
    { name = "Nuno Fachada", email = "nuno.fachada@ulusofona.pt" }
]
readme = "README.md"
requires-python = ">=3.8"
keywords = [
    "iterative methods",
    "deep unfolding",
    "linear equations solver" ]
license = { text = "GPLv3" }
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]
dependencies = [ "numpy >= 1.26", "torch>=2.3" ]

[project.urls]
"Homepage" = "https://github.com/Salahberra2022/deep_unfolding"
"Bug Tracker" = "https://github.com/Salahberra2022/deep_unfolding/issues"
"Documentation" = "https://Salahberra2022.github.io/deep_unfolding/"

[project.optional-dependencies]
dev = [
    "pytest >= 7.0",
    "coverage",
    "pytest-cov >= 3.0.0" ]

[tool.setuptools.packages]
find = {}

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ""
norecursedirs = [
    "hooks",
    "*.egg",
    ".eggs",
    "dist",
    "build",
    "docs",
    "Tutorials",
    ".tox",
    ".git",
    "__pycache__" ]
testpaths = ["src/unfolding_linear", "tests"]
