[metadata]
name = deep_unfolding
version = 0.4.0
author = Salah Berra
author_email = salahberra39@gmail.com
description = deep unfolding of iterative methods to solve linear equations
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/Salahberra2022/deep_unfolding
project_urls =
    Bug Tracker = https://github.com/Salahberra2022/deep_unfolding/-/issues
    repository = https://github.com/Salahberra2022/deep_unfolding
keywords = deep unfolding, iterative methods, trainable parameters, linear equation, optimization parameters, deep learning
classifiers =
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Topic :: Scientific/Engineering

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    numpy>=1.26.4
    torch>=2.3.0

[options.packages.find]
where = src