[metadata]
name = unfolding_linear
version = 0.1.0
description = deep unfolding of iterative methods to solve linear equations
long_description = file: README.md
long_description_content_type = text/markdown
author = Salah Berra
author_email = salahberra39@gmail.com
url = https://github.com/Salahberra2022/deep_unfolding
license = GPLv3

[options]
packages = find:
package_dir =
    = src
install_requires =
    numpy>=1.20.0
    torch>=2.2.0

[options.packages.find]
where = src